--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8" />
-  <title>Run Organizer</title>
+  <meta charset="UTF-8">
+  <title>Organizer Page</title>
+  <!-- Bootstrap CSS (CDN) -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeIvKBSZ12gE0IfGyJMf2jAP7FR3ZFSUtLeetZ9Ce1hANaZ7"
+    crossorigin="anonymous"
+  >
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 1rem;
+      font-family: Arial, sans-serif;
     }
     .chat-container {
       border: 1px solid #ccc;
@@ -31,27 +38,60 @@
       display: flex;
       gap: 0.5rem;
     }
-    .nav-links {
-      margin-top: 1rem;
-    }
   </style>
 </head>
-<body>
+<body class="container py-3">
+
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Run Club</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <!-- Links to your other pages -->
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Organizer</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="runner.html">Runner</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="backup.html">Backup Data</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- END NAVBAR -->
+
   <h1>Run Organizer Page</h1>
-  
-  <!-- Simple navigation link to the Runner page -->
-  <div class="nav-links">
-    <a href="runner.html">Go to Runner Dashboard</a>
-  </div>
-  
+
   <div class="chat-container" id="chatContainer">
-    <!-- Chat messages will be appended here by JavaScript -->
+    <!-- Chat messages go here -->
   </div>
 
   <div class="input-area">
-    <input type="text" id="chatInput" placeholder="Type a message..." />
-    <button id="sendBtn">Send</button>
+    <input type="text" id="chatInput" class="form-control" placeholder="Type a message..." />
+    <button id="sendBtn" class="btn btn-primary">Send</button>
   </div>
+
+  <!-- Bootstrap JS (Optional for toggler functionality) -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+36C2/rV7II+ZB3qF5q85K8HBh9v7"
+    crossorigin="anonymous"
+  ></script>
 
   <script>
     const chatContainer = document.getElementById('chatContainer');
@@ -62,14 +102,14 @@
       const userMessage = chatInput.value.trim();
       if (!userMessage) return;
 
-      // Display the organizer's message
+      // Display Organizer message
       addMessage(userMessage, 'organizer');
 
-      // Stub: Simulate an AI response
+      // Stub AI response
       const aiMessage = `AI says: "${userMessage}"`;
       addMessage(aiMessage, 'ai');
 
-      // Clear the input field
+      // Clear input
       chatInput.value = '';
     });
 
@@ -78,8 +118,6 @@
       msgElem.classList.add('message', sender);
       msgElem.textContent = text;
       chatContainer.appendChild(msgElem);
-
-      // Auto-scroll to the bottom
       chatContainer.scrollTop = chatContainer.scrollHeight;
     }
   </script>
