--- a/runner.html
+++ b/runner.html
@@ -2,18 +2,72 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Runners Dashboard</title>
+  <title>Runner Dashboard</title>
+  <!-- Bootstrap CSS (CDN) -->
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeIvKBSZ12gE0IfGyJMf2jAP7FR3ZFSUtLeetZ9Ce1hANaZ7"
+    crossorigin="anonymous"
+  >
+  <!-- Your custom CSS for fade-in, hidden class, dark-mode, etc. -->
   <link rel="stylesheet" href="css/runner.css">
 </head>
-<body>
-  <h1>Runners Dashboard (Notion Embed)</h1>
+<body class="container py-3">
 
-  <button class="toggle-btn" id="toggleIframeBtn">Hide Iframe</button>
-  <button class="toggle-btn" id="toggleDarkModeBtn">Dark Mode</button>
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Run Club</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Organizer</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="runner.html">Runner</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="backup.html">Backup Data</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- END NAVBAR -->
 
-  <!-- This is where we'll insert the iframe with JavaScript -->
-  <div id="iframeContainer"></div>
+  <h1 class="mb-3">Runner Dashboard</h1>
 
+  <!-- Button group for toggles -->
+  <div class="d-flex gap-2 mb-3">
+    <button class="btn btn-primary" id="toggleIframeBtn">Hide Iframe</button>
+    <button class="btn btn-secondary" id="toggleDarkModeBtn">Dark Mode</button>
+  </div>
+
+  <!-- We'll create the iframe dynamically via runner.js -->
+  <div class="card" id="iframeContainer">
+    <!-- Iframe is injected here -->
+  </div>
+
+  <!-- Bootstrap JS -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+36C2/rV7II+ZB3qF5q85K8HBh9v7"
+    crossorigin="anonymous"
+  ></script>
+
+  <!-- Your custom JS for dynamic iframe, fade-in, toggles, etc. -->
   <script src="js/runner.js"></script>
 </body>
 </html>
