added to netlify

--- a/index.html
+++ b/index.html
@@ -247,6 +247,18 @@
         </div>
     </div>
 
+    <h1>RunClub Agent Demo</h1>
+  <p>Enter a prompt for Toolhouse:</p>
+
+  <input type="text" id="userPrompt" placeholder="E.g., 'Get contents of https://example.com'..." size="50"/>
+  <button id="sendBtn">Send</button>
+
+  <h2>Response</h2>
+  <div id="responseBox"></div>
+
+  <!-- Link to your front-end JS -->
+  <script src="script.js"></script>
+  
     <div class="main-container">
         <div class="sidebar">
             <div class="sidebar-item active">DASHBOARD</div>
