--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
       position: relative;
     }
     .hero img {
-      width: 100%;
+      width: 100%;;
       object-fit: cover;
+      object-position: center; /* centers the image */
     }
     /* Chat Box Styling */
     .chat-box {
