--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
   <!-- Hero Section with group image -->
   <div class="hero">
-    <img src="images/group.jpeg" alt="Group Photo">
+    <img src="images/group.png" alt="Group Photo">
   </div>
 
   <!-- Chat Box Section -->
